--- a/src/styles.scss
+++ b/src/styles.scss
@@ -24,3 +24,5 @@ body{
     font-weight: normal;
     line-height: normal;
 }
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
